rethinking ingestion to avoid big data on heap